--- a/resume.css
+++ b/resume.css
@@ -89,55 +89,29 @@ section{
     margin-top: 1rem;
     border-radius: 1rem;
 }
+.centercontent{
+    text-align: center;
+    margin-top: 3rem;
+}
+.imgresume{
+    width: 90%;
+    margin-top: 3rem;
+    border: 2px solid #7a6969;
+    border-radius: 1rem;
+}
 
 
 
-
-.intro{
-    font-size: 1.7rem;
-    color:#2f2626;
-    line-height: 2.75rem;
-    margin-left: 5%;
-    margin-right: 5%;
-    text-align: justify;
-    font-weight: 500;
-    
-}
-.introduction{
-    border: 1px solid #2f2626;
-    margin-top: 5rem;
-    border-radius: 0.75rem;
-    margin-bottom: 2rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
-}
-hr{
-    border:1px solid #4c3c3c;
-    margin-left: 2rem;
-    margin-right: 2rem;
-   
-}
-.project{
-    margin-left: 5rem;
-    margin-right: 5rem;
-    text-align: justify;
-    font-size: 1.5rem;
-    color:#2f2626;
-    line-height: 2.75rem;
-}
-.projectimg{
-    width: 75%;
-}
-.appimg{
-    width: 40%;
-}
-.link{
-    font-size: 1.5rem;
-    color:#2f2626;
-    line-height: 2.75rem;
+.downloadbtn{
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
     text-decoration: none;
-    font-weight: bold;
+    display: inline-block;
+    font-size: 16px;
+    margin: 24px 2px;
+    cursor: pointer;
+    background-color: #4c3c3c;
+    border-radius: 1rem;
 }
-
-
-
