--- a/index.css
+++ b/index.css
@@ -152,3 +152,156 @@ table{
     width: 80%;
     margin-left: 10%;
 }
+
+
+
+@media screen and (max-width: 480px) {
+    .partleft{
+        width: 100%;
+     
+    }
+    .partright{
+        width: 100%;
+        
+    }
+    h1{
+        text-align: center;
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-weight: lighter;
+        font-size: 1.25rem;
+        vertical-align: middle;
+        padding-top: 10px;
+        z-index: 1;
+        color: #2f2626;
+        width: 90%;
+    }
+    .bbox{
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+        background-image: radial-gradient(rgb(247, 213, 169), rgb(247, 213, 169));
+        height: 50px;
+        margin-top: -25px;
+    }
+    .bbox0{
+        width: 100%;
+        background-image: linear-gradient(to right, rgb(255, 184, 92), rgba(66, 17, 17, 0.747));
+        height: 50px;
+    }
+   
+    q{
+        margin-top: 20px;
+        text-align: center;
+        display: block;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-size: 1.15rem;
+        border: 1px solid #2f2626;
+        border-left: none;
+        border-right: none;
+        width: 95%;
+        margin-left: 2.5%;
+        margin-right: 2.5%;
+    }
+    .left{
+        width: 100%;
+    }
+    .right{
+        width: 100%;
+        margin-bottom: 150px;
+    }
+    #dp{
+        width: 95%;
+        text-align: center;
+        border-radius: 0.4rem;
+        box-shadow: 0 4px 6px 0 rgba(34, 60, 80, .16);
+        transition: all ease-in-out .2s; 
+    }
+    .myname{
+        text-align: center;
+        font-size: xx-large;
+        width: 100%;
+    }
+    .nikh{
+        text-align: center;
+        padding-top: 15px;
+        color: #2f2626;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 1.75rem;
+        text-decoration:overline;
+        width: 100%;
+    }
+    .bg1{
+        background-image: linear-gradient(to right,  rgb(255, 184, 92), rgba(66, 17, 17, 0.747));
+        width: 100%;
+        height: 75px;
+    }
+    .bg2{
+        background-image: linear-gradient(to right, rgb(247, 213, 169), rgb(247, 213, 169));
+        width: 80%;
+        height: 90px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -45px;
+        border-radius: 0.3rem;
+    }
+    .welcome{
+        text-align: center;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: #574545;
+        font-size: medium;
+    }
+    .intro{
+        background-image: radial-gradient( white, rgb(206, 233, 241), white);
+        margin-top: 10px;
+        padding: 15px;
+        text-align: justify;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 0.85rem;
+        font-family: 'Dancing Script', cursive;
+        border-radius: 0.5rem;
+    }
+    .introd{
+        width: 100%;
+        font-size: 1rem;
+        text-align: justify;
+        padding-top: 8px;
+        padding-bottom: 8px;
+    }
+    .ab{
+        text-decoration: none;
+        font-weight: bold;
+        letter-spacing: 0.2rem;
+        font-style: italic;
+        line-height: 1.5;
+        
+    }
+    .looking{
+        margin-top: 10px;
+        padding: 5px;
+        text-align: center;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 1.25rem;
+        font-family:  'Architects Daughter', cursive;
+        color: #3d3737d2;
+    }
+    tr, .tdr{
+        width: 100%;
+    }
+    .tdl, .tdr, .tdbr{
+        font-size: small;
+    }
+    .pic{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        border-radius: 0.35rem;
+    }
+    .tdr{
+        padding-right: 10px;
+    }
+}
