--- a/abilities.css
+++ b/abilities.css
@@ -86,7 +86,10 @@ ul{
     text-decoration: none;
     color: #2f2626;
 }
-
+.certii{
+    padding-left: 15%;
+    padding-right: 15%;
+}
 
 @media screen and (max-width: 480px) {
     .partleft{
@@ -153,5 +156,18 @@ ul{
     ul{
         margin-left: 0;
         padding-left: 2px;
+    }
+    .certii{
+        padding-left: 5%;
+        padding-right: 5%;
+        margin: 0;
+    }
+    hr{
+        width: 80%;
+        text-align: center;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0;
     }
 }
